<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_list_planet"
            android:icon="@drawable/planet"
            android:title="@string/menu_planets" />
        <item
            android:id="@+id/nav_elements"
            android:icon="@drawable/element"
            android:title="@string/menu_elements" />
        <item
            android:id="@+id/nav_trader"
            android:icon="@drawable/trader"
            android:title="@string/menu_trader" />
    </group>
    <group>
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="@string/menu_qr" />
    </group>

</menu>